--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@ I recently graduated from the Cancer Biology and Genomics PhD program at the USC
       <div class="col py-2">
         <div class="card">
           <div class="card-body">
-            <h4 class="card-title exp-title text-muted mt-0 mb-1">Predoctoral fellow, Research Assistant</h4>
+            <h4 class="card-title exp-title text-muted mt-0 mb-1">Research Affiliate</h4>
             <h4 class="card-title exp-company text-muted my-0">University of California, Berkeley, School of Public Health</h4>
             <div class="text-muted exp-meta">
               Jul 2019 –
