--- a/vlogs/vlogs/index.html
+++ b/vlogs/vlogs/index.html
@@ -678,6 +678,14 @@
 <h2 id="other-miscellaneous-projects">Other miscellaneous projects</h2>
 <ul>
 <li>
+<p>Video I made for program recruitment: HSC Campus and USC Village Tour
+
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+  <iframe src="https://www.youtube.com/embed/ihag46fmqdI" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+</div>
+</p>
+</li>
+<li>
 <p>Bootcamp video 90s for KSOM
 
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
@@ -694,10 +702,10 @@
 </p>
 </li>
 <li>
-<p>WONDERSTAR &ndash; a local Louisville KY band
+<p>One day in a PIBBS USC PhD&rsquo;s life
 
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-  <iframe src="https://www.youtube.com/embed/8-5iiQI5vGo" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+  <iframe src="https://www.youtube.com/embed/8ojt_Pa5jIs" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
 </div>
 </p>
 </li>
@@ -706,6 +714,14 @@
 
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
   <iframe src="https://www.youtube.com/embed/ixMLcTB5jTg" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+</div>
+</p>
+</li>
+<li>
+<p>WONDERSTAR &ndash; a local Louisville KY band
+
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+  <iframe src="https://www.youtube.com/embed/8-5iiQI5vGo" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
 </div>
 </p>
 </li>
