--- a/index.html
+++ b/index.html
@@ -1262,7 +1262,7 @@ I recently graduated from the Cancer Biology and Genomics PhD program at the USC
   <div class="col-12 col-sm-4">
     <div class="featurette-icon"><i class="fas fa-dna"></i></div>
     <h3>Bioinformatics</h3>
-    <p>EWAS, GWAS (SNPTEST, PLINK), WDL, GATK, Singularity</p>
+    <p>EWAS, GWAS (SNPTEST, PLINK), GATK, Singularity</p>
   </div>
   
   
