--- a/publication/epigenome-wide-association-study-of-acute-lymphoblastic-leukemia-in-children-with-down-syndrome-letter/index.html
+++ b/publication/epigenome-wide-association-study-of-acute-lymphoblastic-leukemia-in-children-with-down-syndrome-letter/index.html
@@ -769,9 +769,11 @@
 
 <div class="article-tags">
   
+  <a class="badge badge-light" href="/tags/blood-tumor/">blood tumor</a>
+  
   <a class="badge badge-light" href="/tags/first-author/">first author</a>
   
-  <a class="badge badge-light" href="/tags/blood-cancer/">blood cancer</a>
+  <a class="badge badge-light" href="/tags/bioinformatics/">bioinformatics</a>
   
 </div>
 
