--- a/index.html
+++ b/index.html
@@ -903,10 +903,9 @@ I recently graduated from the Cancer Biology and Genomics PhD program at the USC
             </div>
             <div class="card-text"><hr>
 <ul>
-<li>Adopted machine learning and deep learning methods to predict childhood leukemia, and eye diseases with DNA methylation data</li>
-<li>Designed pipelines for germline and somatic variant discovery of WGS and WES data</li>
-<li>Led an NIH 12-country-cohort EWAS project studying birth order and perinatal DNA methylation</li>
-<li>Led a multi-cohort GWAS project on childhood glioma</li>
+<li>Led multiple large scale GWAS and EWAS projects on childhood cancers</li>
+<li>Designed deep learning pipelines to predict childhood leukemia and eye disease risks with DNA methylation</li>
+<li>Built bioinformatics pipelines for germline/somatic variant discovery with WGS data</li>
 <li>Trained new PhD students and pediatrician research fellows</li>
 </ul>
 </div>
@@ -948,8 +947,9 @@ I recently graduated from the Cancer Biology and Genomics PhD program at the USC
             </div>
             <div class="card-text"><hr>
 <ul>
-<li>Conducted childhood leukemia GWAS analyses; pesticide exposure EWAS analysis</li>
-<li>Assessed telomere length and aging changes using DNA methylation data in children with childhood leukemia.</li>
+<li>Carried out childhood leukemia GWAS analyses; pesticide exposure EWAS analyses</li>
+<li>Assessed telomere length and aging changes in children with childhood leukemia</li>
+<li>Managed and monitored proper use of UC Berkeley HPC and delivered routine reports on research progress</li>
 </ul>
 </div>
           </div>
@@ -990,8 +990,8 @@ I recently graduated from the Cancer Biology and Genomics PhD program at the USC
             </div>
             <div class="card-text"><hr>
 <ul>
-<li>Conducted high-throughput association models (GWAS, EWAS) to investigate the associations between neonatal (epi-)genetic changes and disease risks</li>
-<li>Conducted ancestry analysis to investigate contribution of European ancestry to Latino population disease risks</li>
+<li>Conducted high-throughput association models to investigate associations between disease risks and neonatal genetics, epigenetics, cytokines, T-cell receptors, and nucleated cell proportions</li>
+<li>Performed ancestry analysis to investigate contribution of European ancestry to Latino population disease risks</li>
 </ul>
 </div>
           </div>
@@ -1033,6 +1033,7 @@ I recently graduated from the Cancer Biology and Genomics PhD program at the USC
             <div class="card-text"><hr>
 <ul>
 <li>Applied machine learning methods to predict portal pressure and patient outcome from CT-based radiomics</li>
+<li>Collaborated with surgeons and internal doctors on data collection, experiment design and manuscript writing</li>
 </ul>
 </div>
           </div>
